Attachment Management (Media Management or file Upload Download) functionality added
Mostly new files. Touch points are in HttpAgent and Service. CommonData and ServiceData are enhanced to carry media information. tested through an example/tutorial page. Only local disk-based storage is available. RDBMS based storage of attachments, as well as interface with corporate central storage systems are to be developed and tested on a need basis

--- a/example/src/main/webapp/home.html
+++ b/example/src/main/webapp/home.html
@@ -8,6 +8,7 @@
 	<h1>Welcome to Simplity</h1>
 	<div><a href="tutorial/helloWorld.html">Hello World</a></div>
 	<div><a href="tutorial/helloJava.html">Hello Java</a></div>
+	<div><a href="tutorial/fileUpload.html">File upload and download</a></div>
 	<div><a href="test/test.html">Test</a></div>
 </body>
 </html>
