--- a/example/src/main/webapp/tutorial/helloJava.html
+++ b/example/src/main/webapp/tutorial/helloJava.html
@@ -5,7 +5,7 @@
 	<title>Hello World</title>
 	<script type="text/javascript" src="../js/simplity.js"></script>
 </head>
-<body onload="Simplity.getResponse('tutorial.helloJava');//.then(Simplity.pushDataToPage, Simplity.showMessages);">
+<body onload="Simplity.getResponse('tutorial.helloJava').then(Simplity.pushDataToPage, Simplity.showMessages);">
 	<h1 id="hello"></h1>
 </body>
 </html>
