replaced mysql with H2

--- a/example/src/main/webapp/setvalue.html
+++ b/example/src/main/webapp/setvalue.html
@@ -2,10 +2,14 @@
     <script type="text/javascript" src="js/accordion.js"></script>
     <script type="text/javascript" src="js/simplity.js"></script>
 
-<div class="framecontainer">
-<div class="framecontent">
+<div>
+<div>
+<div style="width:60%;float:left;padding:0 10 0 10;"><h3 id="code">Code</h3></div>
+<div style="width:33%;float:left;padding:0 10 0 10;"><button class="buttonstyle" onclick="Simplity.getResponse('tutorial.SetValue')" style="width: 50px;">Run</button></div>
+</div>
+<div>
 <div class="leftcontainer"> 
-<h3 id="code">Code</h3>
+
 <a name="tab-1"></a>
 <ul class="tab">
     <li><a href="JavaScript:void(0)" class="tablinks active" onclick="openTab(event, 'XML')">XML</a></li>
@@ -47,7 +51,6 @@ Simplity.getResponse('tutorial.SetValue')
 </div>
 </div>
 <div class="rightcontainer">
-<button onclick="Simplity.getResponse('tutorial.SetValue')" style="width: 50px;right:0px">Run</button>
     <ul class="tab">
         <li><a href="JavaScript:void(0)" class="tablinks active" onclick="openTab(event, 'OUTPUT')">Output</a></li>
     </ul>
