--- a/example/src/main/webapp/logic.html
+++ b/example/src/main/webapp/logic.html
@@ -1,7 +1,3 @@
-    <link rel="stylesheet" href="css/index.css">
-    <script type="text/javascript" src="js/accordion.js"></script>
-    <script type="text/javascript" src="js/simplity.js"></script>
-
 <div>
 <div>
 <div style="width:60%;float:left;padding:0 10 0 10;"><h3 id="code">Code</h3></div>
@@ -13,7 +9,7 @@
 <a name="tab-1"></a>
 <ul class="tab">
     <li><a href="JavaScript:void(0)" class="tablinks active" onclick="openTab(event, 'XML')">XML</a></li>
-    <li><a href="JavaScript:void(0)" class="tablinks active" onclick="openTab(event, 'JAVA')">JAVA</a></li>    
+    <li><a href="JavaScript:void(0)" class="tablinks" onclick="openTab(event, 'JAVA')">JAVA</a></li>    
     <li><a href="JavaScript:void(0)" class="tablinks" onclick="openTab(event, 'JS')">JS</a></li>
 </ul>
 
@@ -103,7 +99,7 @@ Simplity.getResponse('tutorial.Logic')dsf
         <li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
     </ul>
     <div id="OUTPUT" class="output" style="display:block">
-        <div>__island__</div>
+        <div id="leader"></div>
     </div>
 </div>
 </div>
