--- a/example/src/main/webapp/setvalue.html
+++ b/example/src/main/webapp/setvalue.html
@@ -1,63 +1,34 @@
-    <link rel="stylesheet" href="css/index.css">
-    <script type="text/javascript" src="js/accordion.js"></script>
-    <script type="text/javascript" src="js/simplity.js"></script>
-
-<div>
-<div>
-<div style="width:60%;float:left;padding:0 10 0 10;"><h3 id="code">Code</h3></div>
-<div style="width:33%;float:left;padding:0 10 0 10;"><button class="buttonstyle" onclick="Simplity.getResponse('tutorial.SetValue')" style="width: 50px;">Run</button></div>
-</div>
-<div>
-<div class="leftcontainer"> 
-
-<a name="tab-1"></a>
-<ul class="tab">
-    <li><a href="JavaScript:void(0)" class="tablinks active" onclick="openTab(event, 'XML')">XML</a></li>
-    <li><a href="JavaScript:void(0)" class="tablinks" onclick="openTab(event, 'JS')">JS</a></li>
-</ul>
-
-<div id="XML" class="tabcontent" style="display:block">
-    <xmp>
-<!-- File name: SetValue.xml under comp/services/tp/tutorial -->
-<service dbAccessType="none" description="Action setvalue test"
-         executeInBackground="true" moduleName="tutorial" name="SetValue"
-         xmlns="http://www.simplity.org/schema">
-    <!-- No Input data required for setValye action -->
-    <outputData fieldNames="island,leader,gang,adversaries,novel,lostBoys">
-    </outputData>
-    <actions>
-        <setValue actionName="1" fieldName="island" fieldValue="NeverLand" description="Where did they live?"></setValue>
-        <setValue actionName="2" fieldName="leader" fieldValue="Peter Pan"></setValue>
-        <setValue actionName="3" fieldName="gang" fieldValue="Lost Boys"></setValue>
-
-        <setValue actionName="4" fieldName="adversary1" fieldValue="Captain Hook"></setValue>
-        <setValue actionName="5" fieldName="adversary2" fieldValue="Mr.Smee"></setValue>
-        <setValue actionName="6" fieldName="comma" fieldValue=","></setValue>
-        <setValue actionName="7" fieldName="adversaries" expression="adversary1 + comma + adversary2"></setValue>
-        <setValue actionName="8" fieldName="novel" fieldValue="The Little White Bird" executeOnCondition="?leader"></setValue>
-
-    </actions>
-</service>
-    </xmp>
-</div>
-
-<div id="JS" class="tabcontent">
-    <pre>
-        <xmp>
-Simplity.getResponse('tutorial.SetValue')
-        </xmp>
-    </pre>
-</div>
-</div>
-<div class="rightcontainer">
-    <ul class="tab">
-        <li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
-    </ul>
-    <div id="OUTPUT" class="output" style="display:block">
-        <div id="island"></div>
-    </div>
-</div>
-</div>
-
-
+<div id="setvalueexample" ng-controller="SetValueCtrl">
+	<div>
+		<div style="width: 60%; float: left; padding: 0 10 0 10;">
+			<h3 id="code">Code</h3>
+		</div>
+		<div style="width: 33%; float: left; padding: 0 10 0 10;">
+			<button class="buttonstyle"
+				ng-click="common.runSimplity('tutorial.SetValue','#setvalueexample')">Run</button>
+		</div>
+	</div>
+	<div>
+		<div class="leftcontainer">
+			<div id="setvaluetabs">
+				<ul class="tab">
+					<li ng-repeat="tab in setvaluetabs"
+						ng-class="{active:isActiveTab(tab.url)}" 
+						ng-click="onClickTab(tab)">{{tab.title}}</li>
+				</ul>
+				<div id="setvaluemainView" class="tabcontent">
+					<p ng-bind-html="setvaluecurrentTab" class="binding"></p>
+				</div>
+			</div>
+		</div>
+		<div class="rightcontainer">
+			<ul class="tab">
+				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+			</ul>
+			<div id="OUTPUT" class="output" style="display: block">
+				<div id="island"></div>
+				<div id="leader"></div>
+			</div>
+		</div>
+	</div>
 </div>
