--- a/example/src/main/webapp/index.html
+++ b/example/src/main/webapp/index.html
@@ -25,6 +25,13 @@
 			<a class="sidebar-nav-subitem"	href="#example#setvaluetag">setvalue</a> 
 			<a  class="sidebar-nav-subitem" href="#example#logictag">logic</a> 
 			<a  class="sidebar-nav-subitem" href="#example#createsheettag">createSheet</a>
+			<a  class="sidebar-nav-subitem" href="#example#renamesheettag">renameSheet</a>
+			<a  class="sidebar-nav-subitem" href="#example#jumptotag">jumpTo</a>
+			<a  class="sidebar-nav-subitem" href="#example#rowexiststag">rowExists</a>
+			<a  class="sidebar-nav-subitem" href="#example#addcolumntag">addColumn</a>
+			<a  class="sidebar-nav-subitem" href="#example#copyrowstag">copyRows</a>
+			<a  class="sidebar-nav-subitem" href="#example#addmessagetag">addMessage</a>
+			<a  class="sidebar-nav-subitem" href="#example#copyuseridtag">copyUserId</a>
 			<a  class="sidebar-nav-item" href="">Contact</a> 
 			<a	class="sidebar-nav-item" href="">GitHub project</a> 
 			<span class="sidebar-nav-item">Currently v1.0</span>
@@ -78,6 +85,70 @@
 			<div ng-include = "'createsheet.html'" style="width:100%;height:400px;"></div>
 
 			<!-- Create Sheet example example -->
+
+<hr>
+			<!-- Rename Sheet example -->
+			<h2 id="renamesheettag">Renamesheet</h2>
+
+			<p>Rename a data sheet.Returns true if renaming is successful, false otherwise</p>
+			<div ng-include = "'renamesheet.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Rename Sheet example  -->
+
+			<hr>
+			<!-- Jump To example -->
+			<h2 id="jumptotag">JumpTo</h2>
+
+			<p>Service has actions that are executed in a sequence. JumpTo allows you to change this sequence.</p>
+			<div ng-include = "'jumpto.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Jump To example -->
+
+			<hr>
+			<!-- Row Exists example -->
+			<h2 id="rowexiststag">RowExists</h2>
+
+			<p>Checks if a row exists in this record for the primary key</p>
+			<div ng-include = "'rowexists.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Row Exists example -->
+
+			<hr>
+			<!-- Add Column example -->
+			<h2 id="addcolumntag">AddColumn</h2>
+
+			<p>Add a column to a data sheet</p>
+			<div ng-include = "'addcolumn.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Add Column example -->
+
+			<hr>
+			<!-- Copy Rows example -->
+			<h2 id="copyrowstag">CopyRows</h2>
+
+			<p>Copy rows from a compatible sheet.</p>
+			<div ng-include = "'copyrows.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Copy Rows example -->
+
+			<hr>
+			<!-- Add Message example -->
+			<h2 id="addmessagetag">AddMessage</h2>
+
+			<p>Add a message to the context</p>
+			<div ng-include = "'addmessage.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Add Message example -->
+
+			<hr>
+			<!-- Copy Userid example -->
+			<h2 id="copyuseridtag">CopyUserId</h2>
+
+			<p>Set the special value userId that has the logged-in user id.</p>
+			<div ng-include = "'copyuserid.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Copyo Userid example -->
+
 		</div>
 	</div>
          </script>
