--- a/example/src/main/webapp/index.html
+++ b/example/src/main/webapp/index.html
@@ -32,6 +32,15 @@
 			<a  class="sidebar-nav-subitem" href="#example#copyrowstag">copyRows</a>
 			<a  class="sidebar-nav-subitem" href="#example#addmessagetag">addMessage</a>
 			<a  class="sidebar-nav-subitem" href="#example#copyuseridtag">copyUserId</a>
+			<a  class="sidebar-nav-subitem" href="#example#readdatatag">readData</a>
+			<a  class="sidebar-nav-subitem" href="#example#suggesttag">suggest</a>
+			<a  class="sidebar-nav-subitem" href="#example#filtertag">filter</a>
+			<a  class="sidebar-nav-subitem" href="#example#savedataaddtag">savedataadd</a>
+			<a  class="sidebar-nav-subitem" href="#example#savedatamodifytag">savedatamodify</a>
+			<a  class="sidebar-nav-subitem" href="#example#savedatadeletetag">savedatadelete</a>
+			<a  class="sidebar-nav-subitem" href="#example#readwithsqltag">readwithsql</a>
+			<a  class="sidebar-nav-subitem" href="#example#executesqltag">executesql</a>
+			<a  class="sidebar-nav-subitem" href="#example#uploadtag">upload</a>
 			<a  class="sidebar-nav-item" href="">Contact</a> 
 			<a	class="sidebar-nav-item" href="">GitHub project</a> 
 			<span class="sidebar-nav-item">Currently v1.0</span>
@@ -86,7 +95,7 @@
 
 			<!-- Create Sheet example example -->
 
-<hr>
+			<hr>
 			<!-- Rename Sheet example -->
 			<h2 id="renamesheettag">Renamesheet</h2>
 
@@ -147,8 +156,88 @@
 			<p>Set the special value userId that has the logged-in user id.</p>
 			<div ng-include = "'copyuserid.html'" style="width:100%;height:400px;"></div>
 
-			<!-- Copyo Userid example -->
+			<!-- Copy Userid example -->
 
+			<hr>
+			<!-- Read Data example -->
+			<h2 id="readdatatag">Read</h2>
+
+			<p>Read a row from a record, and possibly read relevant rows from related records</p>
+			<div ng-include = "'readdata.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Read Data example -->
+
+			<hr>
+			<!-- Suggest example -->
+			<h2 id="suggesttag">Suggest</h2>
+
+			<p>Get suggestions from the table associated with a record based on the inputs</p>
+			<div ng-include = "'suggest.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Suggest example -->
+
+			<hr>
+			<!-- Filter example -->
+			<h2 id="filtertag">Filter</h2>
+
+			<p>Read a row from a record, and possibly read relevant rows from related records</p>
+			<div ng-include = "'filter.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Filter example -->
+
+			<hr>
+			<!-- SaveDataAdd example -->
+			<h2 id="savedataaddtag">Save(Add)</h2>
+
+			<p>Save (add/modify/delete) a row from a record, and possibly save relevant rows from related records</p>
+			<div ng-include = "'savedataadd.html'" style="width:100%;height:400px;"></div>
+
+			<!-- SaveDataAdd example -->
+
+			<hr>
+			<!-- SaveDataModify example -->
+			<h2 id="savedatamodifytag">Save(Modify)</h2>
+
+			<p>Save (add/modify/delete) a row from a record, and possibly save relevant rows from related records</p>
+			<div ng-include = "'savedatamodify.html'" style="width:100%;height:400px;"></div>
+
+			<!-- SaveDataModify example -->
+
+			<hr>
+			<!-- SaveDataDelete example -->
+			<h2 id="savedatadeletetag">Save(Delete)</h2>
+
+			<p>Save (add/modify/delete) a row from a record, and possibly save relevant rows from related records</p>
+			<div ng-include = "'savedatadelete.html'" style="width:100%;height:400px;"></div>
+
+			<!-- SaveDataDelete example -->
+
+			<hr>
+			<!-- ReadwithSql example -->
+			<h2 id="readwithsqltag">Read With Sql</h2>
+
+			<p>Read a row/s from as output of a prepared statement/sql</p>
+			<div ng-include = "'readwithsql.html'" style="width:100%;height:400px;"></div>
+
+			<!-- ReadwithSql example -->
+
+			<hr>
+			<!-- ExecuteSql example -->
+			<h2 id="executesqltag">Execute Sql</h2>
+
+			<p>execute a sql</p>
+			<div ng-include = "'executesql.html'" style="width:100%;height:400px;"></div>
+
+			<!-- ExecuteSql example -->
+
+			<hr>
+			<!-- Upload example -->
+			<h2 id="uploadtag">Upload</h2>
+
+			<p>upload a file from temp storage to permanent storage and change the file key/token.</p>
+			<div ng-include = "'upload.html'" style="width:100%;height:400px;"></div>
+
+			<!-- Upload example -->
 		</div>
 	</div>
          </script>
