--- a/example/src/main/webapp/filter.html
+++ b/example/src/main/webapp/filter.html
@@ -1,22 +1,18 @@
 <div id="filterexample" ng-controller="filterCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.filterTest','#filterexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="filtertag">filter</h2>
+
+	<p>Read a row from a record, and possibly read relevant rows from
+		related records</p>
+
 	<div>
 		<div class="leftcontainer">
-			<div id="filtertabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in filtertabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="filtermainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="filtercurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,6 +20,9 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.filterTest','#filterexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<table>
@@ -42,7 +41,7 @@
 							<td>__country__</td>
 							<td>__salesRepEmployeeNumber__</td>
 							<td>__creditLimit__</td>
-							
+
 						</tr>
 					</tbody>
 				</table>
