--- a/example/src/main/webapp/addmessage.html
+++ b/example/src/main/webapp/addmessage.html
@@ -1,22 +1,16 @@
 <div id="addmessageexample" ng-controller="addmessageCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.addMessage','#addmessageexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="addmessagetag">addMessage</h2>
+
+	<p>Add a message to the context</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="addmessagetabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in addmessagetabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="addmessagemainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="addmessagecurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,6 +18,7 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton" ng-click="common.runSimplity('tutorial.addMessage','#addmessageexample')"><a href="JavaScript:void(0)">Run</a></li>								
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<div id="TestUser"></div>
