--- a/example/src/main/webapp/copyrows.html
+++ b/example/src/main/webapp/copyrows.html
@@ -1,22 +1,15 @@
 <div id="copyrowsexample" ng-controller="copyrowsCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.copyRows','#copyrowsexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="copyrowstag">copyRows</h2>
+	<p>Copy rows from a compatible sheet.</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="copyrowstabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in copyrowstabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="copyrowsmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="copyrowscurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,9 +17,13 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.copyRows','#copyrowsexample')"><a
+					href="JavaScript:void(0)" class="tablinks">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
-				Number of rows copied:<div id="testValue"></div>
+				Number of rows copied:
+				<div id="testValue"></div>
 			</div>
 		</div>
 	</div>
