--- a/example/src/main/webapp/copyuserid.html
+++ b/example/src/main/webapp/copyuserid.html
@@ -1,22 +1,15 @@
 <div id="copyuseridexample" ng-controller="copyuseridCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.copyUserId','#copyuseridexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="copyuseridtag">copyUserId</h2>
+	<p>Set the special value userId that has the logged-in user id.</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="copyuseridtabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in copyuseridtabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="copyuseridmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="copyuseridcurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,6 +17,10 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.copyUserId','#copyuseridexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
+
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<div id="testValue"></div>
