--- a/example/src/main/webapp/executesql.html
+++ b/example/src/main/webapp/executesql.html
@@ -1,22 +1,15 @@
 <div id="executesqlexample" ng-controller="executesqlCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.executeSql','#executesqlexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="executesqltag">executeSql</h2>
+	<p>execute a sql</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="executesqltabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in executesqltabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="execuetsqlmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="executesqlcurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,9 +17,13 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.executeSql','#executesqlexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
-				No. of rows updated:<div id="updateSql"></div>
+				No. of rows updated:
+				<div id="updateSql"></div>
 			</div>
 		</div>
 	</div>
