--- a/example/src/main/webapp/jumpto.html
+++ b/example/src/main/webapp/jumpto.html
@@ -1,22 +1,17 @@
 <div id="jumptoexample" ng-controller="jumptoCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.jumpTo','#jumptoexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="jumptotag">jumpTo</h2>
+	<p>Service has actions that are executed in a sequence. JumpTo
+		allows you to change this sequence.</p>
+
 	<div>
 		<div class="leftcontainer">
-			<div id="jumptotabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in jumptotabs"
-						ng-class="{active:isActiveTab(tab.url)}" 
+						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="jumptomainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="jumptocurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,6 +19,9 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.jumpTo','#jumptoexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<div id="island"></div>
