--- a/example/src/main/webapp/logic.html
+++ b/example/src/main/webapp/logic.html
@@ -1,22 +1,16 @@
 <div id="logicexample" ng-controller="LogicCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.Logic','#logicexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="logictag">logic</h2>
+	<p>Logic action allows java classes to manipulate the data fields.
+		The Java class must implement LogicInterface</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="logictabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in logictabs"
-						ng-class="{active:isActiveTab(tab.url)}" 
+						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="logicmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="logiccurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,6 +18,9 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.Logic','#logicexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<div id="island"></div>
