--- a/example/src/main/webapp/readwithsql.html
+++ b/example/src/main/webapp/readwithsql.html
@@ -1,22 +1,15 @@
 <div id="readwithsqlexample" ng-controller="readwithsqlCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.readWithSql','#readwithsqlexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="readwithsqltag">readWithSql</h2>
+	<p>Read a row/s from as output of a prepared statement/sql</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="readwithsqltabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in readwithsqltabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="readwithsqlmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="readwithsqlcurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,13 +17,16 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.readWithSql','#readwithsqlexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<table>
 					<tbody>
 						<tr id="__Employees__" style="display: none;">
 							<td>__lastName__</td>
-							
+
 						</tr>
 					</tbody>
 				</table>
