--- a/example/src/main/webapp/renamesheet.html
+++ b/example/src/main/webapp/renamesheet.html
@@ -1,22 +1,16 @@
 <div id="renamesheetexample" ng-controller="renamesheetCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.renameSheet','#renamesheetexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="renamesheettag">Renamesheet</h2>
+	<p>Rename a data sheet.Returns true if renaming is successful,
+		false otherwise</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="renamesheettabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in renamesheettabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="renamesheetmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="renamesheetcurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,6 +18,9 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.renameSheet','#renamesheetexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<div id="testValue"></div>
