--- a/example/src/main/webapp/savedataadd.html
+++ b/example/src/main/webapp/savedataadd.html
@@ -1,22 +1,16 @@
 <div id="savedataaddexample" ng-controller="savedataaddCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.saveDataAdd','#savedataaddexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="savedataaddtag">save/add</h2>
+	<p>Save (add/modify/delete) a row from a record, and possibly save
+		relevant rows from related records</p>
 	<div>
 		<div class="leftcontainer">
-			<div id="savedataaddtabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in savedataaddtabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="savedataaddmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="savedataaddcurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,9 +18,13 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.saveDataAdd','#savedataaddexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
-				No. of rows added:<div id="testValue"></div>
+				No. of rows added:
+				<div id="testValue"></div>
 			</div>
 		</div>
 	</div>
