--- a/example/src/main/webapp/savedatamodify.html
+++ b/example/src/main/webapp/savedatamodify.html
@@ -1,13 +1,7 @@
 <div id="savedatamodifyexample" ng-controller="savedatamodifyCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.saveDataModify','#savedatamodifyexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="savedatamodifytag">save/modify</h2>
+	<p>Save (add/modify/delete) a row from a record, and possibly save
+		relevant rows from related records</p>
 	<div>
 		<div class="leftcontainer">
 			<div id="savedatamodifytabs">
@@ -24,9 +18,13 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.saveDataModify','#savedatamodifyexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
-				No. of rows modified:<div id="testValue"></div>
+				No. of rows modified:
+				<div id="testValue"></div>
 			</div>
 		</div>
 	</div>
