--- a/example/src/main/webapp/suggest.html
+++ b/example/src/main/webapp/suggest.html
@@ -1,22 +1,18 @@
 <div id="suggestexample" ng-controller="suggestCtrl">
-	<div>
-		<div style="width: 60%; float: left; padding: 0 10 0 10;">
-			<h3 id="code">Code</h3>
-		</div>
-		<div style="width: 33%; float: left; padding: 0 10 0 10;">
-			<button class="buttonstyle"
-				ng-click="common.runSimplity('tutorial.suggest','#suggestexample')">Run</button>
-		</div>
-	</div>
+	<h2 id="suggesttag">suggest</h2>
+
+	<p>Get suggestions from the table associated with a record based on
+		the inputs</p>
+
 	<div>
 		<div class="leftcontainer">
-			<div id="suggesttabs">
+			<div>
 				<ul class="tab">
 					<li ng-repeat="tab in suggesttabs"
 						ng-class="{active:isActiveTab(tab.url)}"
 						ng-click="onClickTab(tab)">{{tab.title}}</li>
 				</ul>
-				<div id="suggestmainView" class="tabcontent">
+				<div class="tabcontent">
 					<p ng-bind-html="suggestcurrentTab" class="binding"></p>
 				</div>
 			</div>
@@ -24,13 +20,16 @@
 		<div class="rightcontainer">
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
+				<li class="runbutton"
+					ng-click="common.runSimplity('tutorial.suggest','#suggestexample')"><a
+					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<table>
 					<tbody>
 						<tr id="__Employees__" style="display: none;">
 							<td>__firstName__</td>
-							
+
 						</tr>
 					</tbody>
 				</table>
