Added xl download functionality to simplity js

--- a/example/src/main/webapp/createsheet.html
+++ b/example/src/main/webapp/createsheet.html
@@ -20,6 +20,9 @@
 				<li class="runbutton"
 					ng-click="common.runSimplity('tutorial.createSheet','#createsheetexample')"><a
 					href="JavaScript:void(0)">Run</a></li>
+				<li class="runbutton"
+					ng-click="common.download('tutorial.createSheet','list')"><a
+					href="JavaScript:void(0)">Download</a></li>					
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
 				<table>
