Fixed Example issues

--- a/example/src/main/webapp/addmessage.html
+++ b/example/src/main/webapp/addmessage.html
@@ -21,7 +21,7 @@
 				<li class="runbutton" ng-click="common.runSimplity('tutorial.addMessage','#addmessageexample')"><a href="JavaScript:void(0)">Run</a></li>								
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
-				<div id="TestUser"></div>
+				<div> Alert message will be shown </div>
 			</div>
 		</div>
 	</div>
