--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -7,7 +7,7 @@
 			<label for="categories">Categories</label> <select
 				class="form-control" id="categories"
 				ng-model="nomination.selectedCategory"
-				ng-options="x for x in categories">
+				ng-options="x.category as x.category for x in categories">
 			</select>
 		</div>
 		<div class="form-group  col-xs-6">
@@ -57,7 +57,9 @@
 	</div>
 
 	<h3>Details of Members</h3>
-	<span>The maximum number of members you can nominate is : 10</span>
+	<div ng-repeat="c in categories">
+	<span ng-if="c.category == nomination.selectedCategory">The maximum number of members you can nominate is : {{c.noOfMembers}}</span>
+	</div>
 	<div class="form-group">
 		<table id="members" class="table">
 			<tr class="row">
@@ -158,7 +160,7 @@
 		<label for="uploadNomination">Upload Nomination</label> <input
 			type="file" ng-model-instant class="form-control-file"
 			id="uploadNomination" aria-describedby="fileHelp"
-			onchange="angular.element(this).scope().fileupload(this)"> <small
+			onchange="angular.element(this).scope().fileupload(this)" ng-model="nomination.filename"> <small
 			id="fileHelp" class="form-text text-muted">
 			<span ng-if="state=='new'">Please upload a zip file and limit the size of the file to 5MB only</span>
 			<span ng-if="state=='view'">Please note that the uploaded file will replace the existing file</span></small>
@@ -166,7 +168,7 @@
 	<hr>
 	<button type="submit" class="btn btn-primary">
 	<span ng-if="state=='new' || state=='sponsor'" ng-click="submit('Saved')">Save</span>
-	<span ng-if="state=='view'" ng-click="updatenomination('Saved')">Update</span>
+	<span ng-if="state=='view'" ng-click="updatenomination(nomination,'Saved')">Update</span>
 	</button>
 	<button type="submit" class="btn btn-primary" ng-click="submit('Submitted')">Submit</button>
 	</fieldset>
