--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -20,16 +20,17 @@
 		<td class="col-xs-1"><a href="a._f?download={{x.filekey}}&filename={{x.filename}}" type="application/x-zip-compressed"> download</a></td>
 		<td class="col-xs-1">{{x.status}}</td>
 		<td class="col-xs-1" ng-if="x.status=='Saved'">
-		<button ng-click="updatenomination('Submitted')">Submit</button>
+		<button ng-click="viewsubmission(x);updatenomination(x,'Submitted')">Submit</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Submitted'">
-		<button disabled="disabled">Recall</button>
+		<button ng-click="viewsubmission(x);updatenomination(x,'Saved')">Recall</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Approved' || x.status=='Rejected'">
 		<button disabled="disabled">No Action</button>
 		</td>
-		<td class="col-xs-1"><span
-			class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removenomination($index)"></span></td>
-
+		<td class="col-xs-1" ng-if="x.status=='Saved'"><span
+			class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removenomination($index)"></span>
+		</td>
+		<td class="col-xs-1" ng-if="x.status!='Saved'"></td>
 	</tr>
 </table>
