--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -160,7 +160,7 @@
 		<label for="uploadNomination">Upload Nomination</label> <input
 			type="file" ng-model-instant class="form-control-file"
 			id="uploadNomination" aria-describedby="fileHelp"
-			onchange="angular.element(this).scope().fileupload(this)" ng-model="nomination.filename"> <small
+			onchange="angular.element(this).scope().fileupload(this)"> <small
 			id="fileHelp" class="form-text text-muted">
 			<span ng-if="state=='new'">Please upload a zip file and limit the size of the file to 5MB only</span>
 			<span ng-if="state=='view'">Please note that the uploaded file will replace the existing file</span></small>
